WIP: Nav Design

--- a/styles/global.css
+++ b/styles/global.css
@@ -17,11 +17,11 @@ a {
   text-decoration: none;
 }
 
-a:hover {
-  text-decoration: underline;
-}
-
 img {
   max-width: 100%;
   display: block;
+}
+
+.linkText{
+  text-transform: lowercase;
 }
