--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -1,7 +1,7 @@
 /* ---- Nav ---- */
 .nav{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 4fr);
     grid-auto-rows: minmax(min-content, max-content);
 }
 
@@ -10,7 +10,7 @@
     height: 275px;
     width: 90%;
     background-color: #fff;
-    margin: 1em;
+    margin: 1em auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,6 +19,17 @@
     font-size: 1.2em;
     font-weight: 500;
     text-transform: capitalize;
+}
+
+.image{
+    width: 100%;
+    height: 100%;
+}
+
+.imageTitle{
+    z-index: 2;
+    position: absolute;
+    color: white;
 }
 
 .mySkills{
@@ -39,3 +50,11 @@
 .blogContainer{
     padding: 2.5%;
 }
+
+/* ---- Media Queries ----*/
+
+@media only screen and (min-width: 765px) {
+    .nav{
+        grid-template-columns: repeat(2, 1fr);
+    }
+  }
