--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,7 +1,8 @@
 .container {
   max-width: 1024px;
+  min-height: 100vh;
   padding: 0 1rem;
-  margin: 3rem auto 6rem;
+  margin: 3rem auto 3rem;
 }
 
 .header {
