--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -2,15 +2,20 @@
   max-width: 1024px;
   min-height: 100vh;
   padding: 0 1rem;
-  margin: 3rem auto 3rem;
+  margin: 0 auto;
 }
 
 .header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 3em;
 }
 
 .backToHome {
   margin: 3rem 0 0;
+}
+
+.centeredText{
+  text-align: center;
 }
