--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -1,8 +1,13 @@
-.icon{
+.icons{
     list-style: none;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     position: sticky;
     top: 99%;
+    padding: 1em 0;
+}
+
+.icon{
+    color: black;
 }
