--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 11px -1px;
     color: black;
     font-size: 1.2em;
     font-weight: 500;
@@ -26,6 +26,15 @@
     height: 100%;
     object-fit: cover;
     filter: brightness(0.6);
+    transition: all .5s ease-in-out;
+    overflow: hidden;
+}
+
+.image:hover{
+    transform: scale(1.1);
+    transition: all .5s ease-in-out;
+    overflow: hidden;
+    filter: brightness(0.8);
 }
 
 .imageTitle{
