--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -50,3 +50,10 @@
 .lightText {
   color: #666;
 }
+
+.header{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
